codigo/two-recommendations/assets/css/style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  display: grid;
  place-items: center;
  min-height: 100vh;
}

.options-container {
  max-width: 720px;
  padding: 0 2rem;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
}

.options-container .submit-btn {
  padding: 0.5rem 1rem;
  font-size: 1rem;
  border: 0;
  border-radius: 8px;
  background: #333;
  color: #fff;
  cursor: pointer;
  transition: 0.2s;
}

.options-container .submit-btn:hover {
  background: #222;
}

.options {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
}

.option {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  position: relative;
}

.option-poster {
  background: transparent;
  border: 1px dashed #333;
  border-radius: 8px;
  height: 300px;
  aspect-ratio: 3/4;
  font-size: 2rem;
  transition: 0.2s;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
}

.option-poster:hover {
  background: #f0f0f0;
}

.option input {
  font-size: 0.825rem;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  border: 1px solid #333;
}

.option .results {
  position: absolute;
  width: 100%;
  background: #f0f0f0;
  top: 100%;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 1rem;
}

.option .results .results-item {
  display: flex;
  gap: 1rem;
}

.option .results .results-item strong {
  display: block;
}

.option .results .results-item img {
  height: 80px;
  border-radius: 4px;
  aspect-ratio: 3/4;
  object-fit: cover;
}

.recommendations {
  max-width: 1080px;
  padding: 2rem;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  gap: 1rem;
}

.recommendations .recommendation {
  max-width: 400px;
}

.poster {
  height: 300px;
  border-radius: 8px;
  aspect-ratio: 3/4;
  object-fit: cover;
  background: #f0f0f0;
}

